--- a/paper/wrangleData.qmd
+++ b/paper/wrangleData.qmd
@@ -67,7 +67,7 @@ execute:
 editor_options: 
   chunk_output_type: console
 editor:
-  render-on-save: true
+  render-on-save: false
 title: |
   | Data Wrangling Before Harmonization:
   | Best Practices for Getting
@@ -84,7 +84,7 @@ keywords:
 
 ---
 
-```{r}
+```{r preload}
 #| label: setup
 #| include: false
 
@@ -269,170 +269,39 @@ body(small_multiple)[[19]] <- substitute(
 ```
 
 \pagebreak
-# The Problem with 'Janitor Work'
-Most data harmonization projects---and a growing volume of other political science research---can be characterized as data science: they employ large quantities of data, often drawn from a large number of different sources.
-For such projects, data wrangling, the task of getting these data into the format required to perform harmonization or analysis, is notoriously the bulk of the work [see, e.g., @Lohr2014].
-Such 'janitor work' is often viewed as tiresome, as something to be delegated to research assistants, to someone---indeed anyone---else [see @Torres2017].
-Data wrangling is, however, critically important to scientific inquiry, and errors that arise during this process can undermine our data-harmonization goals.
 
-One kind of data-wrangling error presents a particularly insidious problem: errors that occur during manual data entry.
-Faced with the task of getting data into the correct format before harmonizing, even some very sophisticated researchers will conclude that the most straightforward means to that end is to simply copy the needed data into a spreadsheet by hand.
-This technique may be straightforward, but it is very much prone to error.
-@Barchard2011 found that 'research assistants' assigned in an experiment to carefully enter data manually, even those instructed to double-check their entries against the original, had error rates approaching 1% in just a single roughly half-hour session.
-Rates likely go up as the tedious task goes on.
-Although the pernicious consequences of data-entry errors are easily grasped in everyday contexts---@Haegemans2019 [, 1] collects examples of misrouted financial transactions and airline flights---they have thus far gained little attention in political science, even among those working to harmonize large quantities of data.
+# A Wrangling Issue of Data Harmonization
 
-We suggest three best practices for reducing the rate of data-entry errors.
-First, _automate data entry_ to the greatest extent possible.
-Second, _use the double-entry method_: when manual data entry cannot be avoided, each entry should be made twice, either by separate researchers or sequentially.
-Third, _embrace teamwork_ for any project involving entering data by hand, splitting the task up among team members will reduce the risk of errors going undetected.
-We demonstrate the application of these practices within two ongoing harmonization efforts, the Standardized World Income Inequality Database (SWIID) and the Dynamic Comparative Public Opinion (DCPO) project.
+<!-- - Increasing more projects involves large amounts of data
+- Researchers have found serious problems when data selection and models selection are inapprorpiate: the wrangling in between can be also problematic
+    - when invoivling arranging multiple data sets, or ra jobs
+    - Problematic aggregated way, the plot
+- The point of this section is to lay out a practical 3-step routine for researchers to wrangle data for researchers' reference
+    - the two principles: 
+      - As much as possible (if updated is also possible, external validity)
+      - As accuracy as possible -> transparent (internal validity)
+    - The two examples
+      - SWIID
+      - DCPO -->
 
+Empowered by the spreading Internet and advancing computational power, researchers have entered an unprecedented age of data availability.
+A growing volume of political science research aim to take the benefit to extend the generality: they employ large quantities of data drawn from different sources.
+Nevertheless, associating with the increasing amount and diversity of data is the challenge of data wrangling, including a notorious bulk of manual work on indicator identification, data merging, data scaling, and so on [see, e.g., @Lohr2014].
 
-# Wrangling Income Inequality Data for Harmonization
+Such "janitor work" is often tiresome and easy to introduce errors.
+@Barchard2011 found that "research assistants"(RA) assigned in an experiment to carefully enter data manually, even those instructed to double-check their entries against the original, had error rates approaching 1% in just a single roughly half-hour session.
+The consequences of such errors can be pernicious.
+@Haegemans2019 [p. 1] has demonstrated examples of misrouted financial transactions and airline flights.
+Here we provide a more vivid one from political science to show how big difference merely data wrangling can make:
 
-```{r data-setup}
-#| label: data
-#| include: false
+The example involves the data harmonization efforts to combine people's support of democracy across public surveys around the world into an analytic dataset.
+We compare the outcome based on two data-wrangling approaches: the one approach based on original hand-entered spreadsheet that has been applied in some prominent publications [see @Claassen2020a; @Claassen2020b] and subsequent studies [see @Claassen2022; @Jacob2025] and the other approach with multiple machine-collected steps that we will outline later in this article.
 
-api <- c("LISSY", "CEPALStat", "OECD", "Eurostat", "Beegle et al. 2016", "Statistics Canada", "Statistics Denmark", "Statistics Finland", "CSO Ireland", "Statistics Norway", "Statistics Sweden", "World Bank Poverty & Inequality Platform", "Statbank Greenland")
-sheet <- c("SEDLAC", "Transmonee 2012", "Personal communication, K. Beegle, 2016-08-01", "World Bank Povcalnet", "Australian Bureau of Statistics", "Instituto Naciónal de Estadística de Bolivia", "Instituto de Pesquisa Económica Aplicada", "Departamento Administrativo Nacional de Estadística Colombia", "Instituto Naciónal de Estadística y Censos Costa Rica", "Central Agency for Public Mobilization and Statistics Egypt", "Statistics Estonia", "Statistics Georgia", "Statistics Hong Kong 2017", "Statistics Indonesia", "Istat", "Statistical Institute of Jamaica", "Kazakhstan Committee on Statistics", "Statistics Korea", "National Statistical Committee of Kyrgyzstan", "National Bureau of Statistics of Moldova", "Statistical Office of Montenegro", "Statistics New Zealand 1999", "Philippines Statistical Agency", "Russian Federal State Statistics Service", "Singapore Department of Statistics", "Slovenia Statistics Office", "Slovenia Statistics Office 2005", "Instituto Nacional de Estadística Spain", "Switzerland Federal Statistics Office", "Taiwan Directorate General of Budget, Accounting, and Statistics", "Turkish Statistical Institute", "UK Office for National Statistics", "Institute for Fiscal Studies", "U.S. Congressional Budget Office", "U.S. Census Bureau", "Instituto Nacional de Estadística Venezuela", "Milanovic 2016", "Milanovic 2016; Brandolini 1998", "Ackah, Bussolo, De Hoyos, and Medvedev 2008", "NESDC Thailand", "U.S. Census Bureau 1998", "Dirección General de Estadística, Encuestas y Censos")
-scrape <- c(
-  "National Statistical Service of Armenia", "Belarus National Committee of Statistics", "Statistics Hong Kong 2012", "Statistics Hong Kong 2007", "Dirección General de Estadística, Encuestas y Censos 2016", "Economy Planning Unit of Malaysia", "Perry 2018", "Dirección General de Estadística, Encuestas y Censos 2017", "Statistics Sri Lanka 2015", "NESDB Thailand", "Instituto Nacional de Estadística Uruguay", "General Statistics Office of Vietnam 2013", "General Statistics Office of Vietnam", # <- scrape from pdf
-  # webscrape ->
-  "Institut National de la Statistique et des Études Économiques France", "Statistical Center of Iran", "National Statistical Office of Thailand"
-)
-
-length(api) <- length(sheet)
-length(scrape) <- length(sheet)
-
-mode <- tibble(api, sheet, scrape) %>%
-  gather(key = mode, value = source1) %>%
-  filter(!is.na(source1))
-
-swiid_source <- read_csv("https://raw.githubusercontent.com/fsolt/swiid/master/data/swiid_source.csv",
-  col_types = "cdddcclcccc"
-) %>%
-  left_join(mode, by = "source1") %>%
-  mutate(mode = if_else(is.na(mode), "hand", mode))
-
-wordify_numeral <- function(x) setNames(c("one", "two", "three", "four", "five", "six", "seven", "eight", "nine", "ten", "eleven", "twelve", "thirteen", "fourteen", "fifteen", "sixteen", " seventeen", "eighteen", "nineteen"), 1:19)[x]
-
-api_percent <- swiid_source %>%
-  count(mode == "api") %>%
-  mutate(p = round(n / nrow(swiid_source) * 100)) %>%
-  filter(`mode == "api"` == TRUE) %>%
-  pull(p)
-
-automated_percent <- swiid_source %>%
-  count(mode == "hand") %>%
-  mutate(p = round(n / nrow(swiid_source) * 100)) %>%
-  filter(`mode == "hand"` == FALSE) %>%
-  pull(p)
-
-```
-
-The Standardized World Income Inequality Database (SWIID) is a long-running project that seeks to provide harmonized income inequality statistics for the broadest possible coverage of countries and years [@Solt2009; @Solt2015; @Solt2016; @Solt2020].
-As of its most recent update at the time of this writing, its source data consists of some 27,000 observations of the Gini coefficient of income distribution in nearly 200 countries over as many as 65 years, collected from over 400 separate sources including international organizations, national statistics bureaus, and academic studies.^[
-Those who are interested can access and explore these data on the web at <https://fsolt.org/swiid/swiid_source.html>.]
-
-```{r}
-#| label: data_by_method
-#| echo: false
-#| fig-cap: "\\label{fig:data_by_method}Income Inequality Observations by Method of Collection"
-#| fig-height: 2
-#| fig-width: 4
-
-
-swiid_source %>%
-  count(mode) %>%
-  mutate(method = fct_recode(factor(mode),
-    "API" = "api",
-    "Spreadsheet\nDownload" = "sheet",
-    "Web/PDF\nScrape" = "scrape",
-    "Hand\nEntered" = "hand"
-  ) %>%
-    fct_relevel(
-      "Hand\nEntered",
-      "Web/PDF\nScrape",
-      "Spreadsheet\nDownload",
-      "API"
-    )) %>%
-  ggplot(aes(x = n, y = method, fill = method)) +
-  geom_bar(stat = "identity") +
-  theme_bw() +
-  theme(axis.title.y = element_blank()) +
-  xlab("Observations") +
-  scale_fill_manual("Legend", values = c(
-    "Hand\nEntered" = "gray75",
-    "Web/PDF\nScrape" = "gray10",
-    "Spreadsheet\nDownload" = "gray10",
-    "API" = "gray10"
-  )) +
-  theme(legend.position = "none")
-
-# Hand-Entered and Machine-Collected
-```
-
-In early versions of the SWIID, all of these source data were entered by hand, and checks of newly entered observations revealed that error rates were high.
-Moreover, many of the sources consulted frequently update or revise their figures.
-To avoid data-entry errors and ensure that updates and revisions are automatically incorporated as they become available, since 2015 the process of collecting the source data has been automated to the greatest extent practicable [@Solt2020, 1184-1185].^[
-The R code for this automated data collection can be viewed here: <https://github.com/fsolt/swiid/blob/master/R/data_setup.R>.]
-
-Most international organizations and a few national statistical bureaus use application programming interfaces (APIs) that facilitate automating the inclusion of their data; the R community has often built packages using these APIs to make the task even easier [see @Blondel2018; @Magnusson2014; @Lahti2017; @Lugo2017; @Wickham2018].
-The SWIID takes as much advantage of these resources as possible, as shown in Figure&nbsp;\ref{fig:data_by_method}.
-Although the sources with APIs are relatively few, they contain by far the most data: `r api_percent`% of the observations are collected in this way.
-When no API is available, the automation script downloads and reads any available spreadsheets [see @Wickham2016a].
-In the absence of a spreadsheet, the process of scraping the data either directly from the web or, preferably, from a pdf file [see @Sepulveda2024] is automated.
-Together the collection of `r automated_percent`% of the source data is scripted.
-This means not only that the possibility of errors introduced by hand entry for a vast majority of observations is eliminated but also that the updates and revisions that are frequent in these data are automatically incorporated as they become available.
-
-However, it also means that some `r 100 - automated_percent`% of the observations are entered by hand.^[
-The resulting spreadsheet can be found at <https://github.com/fsolt/swiid/blob/master/data-raw/fs_added_data.csv>.]
-Many sources contain just a handful or fewer observations, making the payoff to the often laborious process of data cleaning too small to justify the effort.
-Some sources---including most academic articles---are behind paywalls, making automation particularly challenging.
-When these sources contain more than a handful of observations, these are still collected using Sepulveda's [-@Sepulveda2024] `tabulapdf` R package to avoid data-entry errors.
-Other sources, such as many books, cannot be read directly into R.
-And finally, one source contains crucial information encoded in the typeface of its tables [see @Mitra2006, 6]; this information would be lost if the tables were read directly into R.
-All such new observations are entered twice into separate spreadsheets.
-Most often this has been done by two different investigators, but sometimes sequentially by a single researcher.
-Either way, using this double-entry method allows for automated cross-checks of the newly entered data that increase the chances that errors are identified and corrected [see @Barchard2011].
-
-To summarize, the process of collecting the source data for the SWIID is 90% automated, and the dual-entry method is employed for the remaining 10%.
-The upshot of this process is that the SWIID's harmonized estimates of income inequality are reliable, frequently updated, and employed around the world by international organizations, central banks, and other researchers in academia and beyond.
-
-
-# Wrangling Public Opinion Data for Harmonization
-
-Scholarship on comparative public opinion only rarely benefits from relevant items asked annually by the same survey in many countries [see, e.g., @Hagemann2017].
-To address the lack of cross-national and longitudinal data on many topics, a number of works have presented latent variable models that harmonize available but incomparable survey items [see @Caughey2019; @Claassen2019; @McGann2019; @Solt2020c; @Kolczynska2024].
-This approach has been used to generate cross-national time-series measures of public opinion on a range of topics, from economic, social, and immigration conservatism [@Caughey2019] to trust in government [@Kolczynska2024].
-The Dynamic Comparative Public Opinion (DCPO) model presented in @Solt2020c in particular has been employed to measure gender egalitarianism [@Woo2023], political interest [@Hu2024], and support for gay rights [@Woo2025], among other aspects of public opinion (see <https://dcpo.org/>).
-
-This sort of work is by nature extremely data intensive, drawing on information extracted from dozens if not hundreds of survey datasets.
-In DCPO projects, the collection of the source data proceeds in two steps: first, identifying the relevant survey items, and second, accumulating the survey responses.
-
-The first step, identifying the relevant survey items, involves finding surveys that contain questions on the topic of interest and then recording in a spreadsheet the survey, the variable representing the question of interest in the dataset, the question text, the response values ordered from least to most of the concept being investigated, and the original textual response categories.
-At present, this step is done entirely by hand.
-To minimize data-entry errors, the dual-entry method is used here too.
-Multiple collaborators go through the process separately, and the resulting spreadsheets are compared to catch the omnipresent data-entry errors.
-
-The second step, accumulating the survey responses, is fully automated through the use of the `DCPOtools` R package [@Solt2018].
-When passed the spreadsheet created in the first step, this package reads in each recorded survey dataset, extracts the variable of interest, reorders the response values for this variable from least to most of the concept investigated, applies survey weights, and then aggregates the weighted number of respondents in each of the reordered response categories in each country for each year in which the survey was fielded.
-`DCPOtools` also automatically ensures that country names are standardized using the excellent `countrycode` package for R [@Arel-Bundock2018] and that the years accurately reflect actual fieldwork dates using internal crosswalk tables.
-The aggregated number of respondents for each observed response-item-country-year then serve as the source data for the latent variable model.
-
-To illustrate the advantages of this more robust process relative to manual entry, we reexamine the source data for latent variable estimates of public support for democracy that were used first in a pair of very prominent publications [see @Claassen2020a; @Claassen2020b] and subsequently in additional studies [see @Claassen2022; @Jacob2025].
-These source data consist of thousands of nationally aggregated responses to dozens of different questions asked in cross-national survey projects that were apparently copied by hand into a spreadsheet from the crosstabulations included in the surveys' codebooks [see @Claassen2020d].
-Two pieces of data were collected for each distinct survey item in each country and year it was asked: the number of respondents to give a democracy-supporting response---defined, for ordinal questions, as those above the median value of the response scale [@Claassen2020b, Appendix 1.3]---and the total number of respondents to whom the question was posed.
-
-We re-collected all of these source data from the original surveys.
-Following the two-step process described above, for each of the 52 survey items in the source data, we first identified the variables, response categories, and so on, and then we used `DCPOtools` to collect the needed data from the survey datasets by machine.
-In @fig-comparison, we compare the percentage of respondents to give a democracy-supporting response in the original hand-entered spreadsheet with the percentage in the machine-collected data.
+@fig-comparison shows the outcome differences between the two approaches by plotting the percentage of respondents to give a democracy-supporting response from the data wrangled through them against each other.
 When points fall along the plot's dotted line, it indicates that the hand-entered and machine-collected source data report the same percentages.
 Points above this diagonal represent observations for which the hand-entered data are higher than the percentage calculated directly from the survey datasets, while points below this line are observations where the hand-entered data are lower than this machine-collected percentage.
 
-```{r}
+```{r data-dcpo}
 #| label: data_comparison
 #| include: false
 
@@ -650,7 +519,7 @@ data_comparison <- bind_rows(no_problems, year_fixes) %>%
 save(data_comparison, file = here::here("data", "data_comparison.rda"))
 ```
 
-```{r}
+```{r comparison-dcpo}
 #| label: fig-comparison
 #| fig-cap: "Comparing Democracy-Supporting Responses in Hand-Entered and Machine-Collected Data"
 #| fig-align: "center"
@@ -716,15 +585,179 @@ plot_support +
 
 ```
 
-For `r {mean(data_comparison$diff_perc_abs < .5)*100} %>% round()`% of the country-year-item observations, the difference between these percentages was negligible---less than half a percent---yielding points approximately along the plot's dotted line.
-But for the remaining observations, the difference was often substantial due to data-entry errors in the hand-entered data.
-For three survey items contributing observations to a total of 135 country-years, the differences were found to result from deviations from the original study's coding rules: for two items the median category was mistakenly also counted as a democracy-supporting response, and for one an above-median category was not (for details, see online Appendix A).
+For `r {mean(data_comparison$diff_perc_abs < .5)*100} %>% round()`% of the country-year-item observations, the difference between these percentages may be negligible---less than half a percent---yielding points approximately along the plot's dotted line.
+But for the remaining observations, the difference is too evident to be ignored.
+When digging in more, we observe that the obvious difference shown in @fig-comparison were caused by errors like inconsistent categorizing, recording the numerator of the percentage entering the denominator, and miscounting respondents who were not given the question in the original surveys into the total number of respondents (see more detailed comparisons in @sec-comparison).
 
-While these issues involve mistakes in recording the numerator of the percentage, the number of respondents who provided a democracy-supporting answer, entering the denominator, the total number of respondents asked a question, was also problematic on occasion.
-For example, when the Americas Barometer surveyed Canada in 2010, it asked half its sample, whether when "democracy doesn't work," Canadians "need a strong leader who doesn’t have to be elected through voting."
-Those who were not asked the question were included in the total number of respondents.
-According to the study's coding rules, refusing to answer is equivalent to answering in a fashion not supporting democracy [see @Claassen2020b, Appendix 1.3].
-This rule may or may not be a reasonable coding choice [see @Hu2025], but including in this category those who were never asked the question at all is clearly a data-entry error.
+
+Each of these errors alone looks like an itty-bitty mistake.
+Researchers may also hold an illusion that such errors could be "washed out" as random noises.
+However, in @sec-consequence, we show that small mistakes can lead to completely opposite inferences [see also @HuEtAl2024a].
+On the other hand, these are mistakes that every researcher and RA could make.
+The commonality perhaps makes them as one of the largest obstacle on the way to data harmonization, which yet have thus far gained little attention in political science.
+
+In this article, we provide a practical routine taken the advantage of automatic programming and team work to reduce such data-entry errors and also improve the transparency of the wrangling process for researchers and reviewers to check the errors.
+The routine includes three steps: team-based data collection, automate data entry, and "second-order" data replication.
+We illustrate how researchers use this routine on statistical (*hard*) and opinion (*soft*) data with two ongoing harmonization efforts, the Standardized World Income Inequality Database (SWIID) and the Dynamic Comparative Public Opinion (DCPO) project.
+
+# A 3-Step Routine for Data Harmonization
+
+
+
+- Step 1: group with multiple members
+    - Efficiency 
+    - Double check
+    - Aware of the logic and the purposes of the project
+- Step 2: Collect and organize data
+  - Challenges
+      - The latest, best data
+      - The human error
+      - The human judgement
+      - The transparency
+  - Solutions
+      - Automation
+      - Traceable working sheet
+      - Multiple researchers coding and cross-checking
+  - Nonopinionative data: e.g., SWIID
+  - Opinionative data: e.g., DCPO
+- Step 3: open source
+    - OSF 
+    - Github
+
+
+# Wrangling Income Inequality Data for Harmonization
+
+```{r data-swiid}
+#| label: data
+#| include: false
+
+api <- c("LISSY", "CEPALStat", "OECD", "Eurostat", "Beegle et al. 2016", "Statistics Canada", "Statistics Denmark", "Statistics Finland", "CSO Ireland", "Statistics Norway", "Statistics Sweden", "World Bank Poverty & Inequality Platform", "Statbank Greenland")
+sheet <- c("SEDLAC", "Transmonee 2012", "Personal communication, K. Beegle, 2016-08-01", "World Bank Povcalnet", "Australian Bureau of Statistics", "Instituto Naciónal de Estadística de Bolivia", "Instituto de Pesquisa Económica Aplicada", "Departamento Administrativo Nacional de Estadística Colombia", "Instituto Naciónal de Estadística y Censos Costa Rica", "Central Agency for Public Mobilization and Statistics Egypt", "Statistics Estonia", "Statistics Georgia", "Statistics Hong Kong 2017", "Statistics Indonesia", "Istat", "Statistical Institute of Jamaica", "Kazakhstan Committee on Statistics", "Statistics Korea", "National Statistical Committee of Kyrgyzstan", "National Bureau of Statistics of Moldova", "Statistical Office of Montenegro", "Statistics New Zealand 1999", "Philippines Statistical Agency", "Russian Federal State Statistics Service", "Singapore Department of Statistics", "Slovenia Statistics Office", "Slovenia Statistics Office 2005", "Instituto Nacional de Estadística Spain", "Switzerland Federal Statistics Office", "Taiwan Directorate General of Budget, Accounting, and Statistics", "Turkish Statistical Institute", "UK Office for National Statistics", "Institute for Fiscal Studies", "U.S. Congressional Budget Office", "U.S. Census Bureau", "Instituto Nacional de Estadística Venezuela", "Milanovic 2016", "Milanovic 2016; Brandolini 1998", "Ackah, Bussolo, De Hoyos, and Medvedev 2008", "NESDC Thailand", "U.S. Census Bureau 1998", "Dirección General de Estadística, Encuestas y Censos")
+scrape <- c(
+  "National Statistical Service of Armenia", "Belarus National Committee of Statistics", "Statistics Hong Kong 2012", "Statistics Hong Kong 2007", "Dirección General de Estadística, Encuestas y Censos 2016", "Economy Planning Unit of Malaysia", "Perry 2018", "Dirección General de Estadística, Encuestas y Censos 2017", "Statistics Sri Lanka 2015", "NESDB Thailand", "Instituto Nacional de Estadística Uruguay", "General Statistics Office of Vietnam 2013", "General Statistics Office of Vietnam", # <- scrape from pdf
+  # webscrape ->
+  "Institut National de la Statistique et des Études Économiques France", "Statistical Center of Iran", "National Statistical Office of Thailand"
+)
+
+length(api) <- length(sheet)
+length(scrape) <- length(sheet)
+
+mode <- tibble(api, sheet, scrape) %>%
+  gather(key = mode, value = source1) %>%
+  filter(!is.na(source1))
+
+swiid_source <- read_csv("https://raw.githubusercontent.com/fsolt/swiid/master/data/swiid_source.csv",
+  col_types = "cdddcclcccc"
+) %>%
+  left_join(mode, by = "source1") %>%
+  mutate(mode = if_else(is.na(mode), "hand", mode))
+
+wordify_numeral <- function(x) setNames(c("one", "two", "three", "four", "five", "six", "seven", "eight", "nine", "ten", "eleven", "twelve", "thirteen", "fourteen", "fifteen", "sixteen", " seventeen", "eighteen", "nineteen"), 1:19)[x]
+
+api_percent <- swiid_source %>%
+  count(mode == "api") %>%
+  mutate(p = round(n / nrow(swiid_source) * 100)) %>%
+  filter(`mode == "api"` == TRUE) %>%
+  pull(p)
+
+automated_percent <- swiid_source %>%
+  count(mode == "hand") %>%
+  mutate(p = round(n / nrow(swiid_source) * 100)) %>%
+  filter(`mode == "hand"` == FALSE) %>%
+  pull(p)
+
+```
+
+The Standardized World Income Inequality Database (SWIID) is a long-running project that seeks to provide harmonized income inequality statistics for the broadest possible coverage of countries and years [@Solt2009; @Solt2015; @Solt2016; @Solt2020].
+As of its most recent update at the time of this writing, its source data consists of some 27,000 observations of the Gini coefficient of income distribution in nearly 200 countries over as many as 65 years, collected from over 400 separate sources including international organizations, national statistics bureaus, and academic studies.^[
+Those who are interested can access and explore these data on the web at <https://fsolt.org/swiid/swiid_source.html>.]
+
+```{r method-swiid}
+#| label: fig-dataMethod
+#| echo: false
+#| fig-cap: "Income Inequality Observations by Method of Collection"
+#| fig-height: 2
+#| fig-width: 4
+
+
+swiid_source %>%
+  count(mode) %>%
+  mutate(method = fct_recode(factor(mode),
+    "API" = "api",
+    "Spreadsheet\nDownload" = "sheet",
+    "Web/PDF\nScrape" = "scrape",
+    "Hand\nEntered" = "hand"
+  ) %>%
+    fct_relevel(
+      "Hand\nEntered",
+      "Web/PDF\nScrape",
+      "Spreadsheet\nDownload",
+      "API"
+    )) %>%
+  ggplot(aes(x = n, y = method, fill = method)) +
+  geom_bar(stat = "identity") +
+  theme_bw() +
+  theme(axis.title.y = element_blank()) +
+  xlab("Observations") +
+  scale_fill_manual("Legend", values = c(
+    "Hand\nEntered" = "gray75",
+    "Web/PDF\nScrape" = "gray10",
+    "Spreadsheet\nDownload" = "gray10",
+    "API" = "gray10"
+  )) +
+  theme(legend.position = "none")
+
+# Hand-Entered and Machine-Collected
+```
+
+In early versions of the SWIID, all of these source data were entered by hand, and checks of newly entered observations revealed that error rates were high.
+Moreover, many of the sources consulted frequently update or revise their figures.
+To avoid data-entry errors and ensure that updates and revisions are automatically incorporated as they become available, since 2015 the process of collecting the source data has been automated to the greatest extent practicable [@Solt2020, 1184-1185].^[
+The R code for this automated data collection can be viewed here: <https://github.com/fsolt/swiid/blob/master/R/data_setup.R>.]
+
+Most international organizations and a few national statistical bureaus use application programming interfaces (APIs) that facilitate automating the inclusion of their data; the R community has often built packages using these APIs to make the task even easier [see @Blondel2018; @Magnusson2014; @Lahti2017; @Lugo2017; @Wickham2018].
+The SWIID takes as much advantage of these resources as possible, as shown in Figure&nbsp;\ref{fig:data_by_method}.
+Although the sources with APIs are relatively few, they contain by far the most data: `r api_percent`% of the observations are collected in this way.
+When no API is available, the automation script downloads and reads any available spreadsheets [see @Wickham2016a].
+In the absence of a spreadsheet, the process of scraping the data either directly from the web or, preferably, from a pdf file [see @Sepulveda2024] is automated.
+Together the collection of `r automated_percent`% of the source data is scripted.
+This means not only that the possibility of errors introduced by hand entry for a vast majority of observations is eliminated but also that the updates and revisions that are frequent in these data are automatically incorporated as they become available.
+
+However, it also means that some `r 100 - automated_percent`% of the observations are entered by hand.^[
+The resulting spreadsheet can be found at <https://github.com/fsolt/swiid/blob/master/data-raw/fs_added_data.csv>.]
+Many sources contain just a handful or fewer observations, making the payoff to the often laborious process of data cleaning too small to justify the effort.
+Some sources---including most academic articles---are behind paywalls, making automation particularly challenging.
+When these sources contain more than a handful of observations, these are still collected using Sepulveda's [-@Sepulveda2024] `tabulapdf` R package to avoid data-entry errors.
+Other sources, such as many books, cannot be read directly into R.
+And finally, one source contains crucial information encoded in the typeface of its tables [see @Mitra2006, 6]; this information would be lost if the tables were read directly into R.
+All such new observations are entered twice into separate spreadsheets.
+Most often this has been done by two different investigators, but sometimes sequentially by a single researcher.
+Either way, using this double-entry method allows for automated cross-checks of the newly entered data that increase the chances that errors are identified and corrected [see @Barchard2011].
+
+To summarize, the process of collecting the source data for the SWIID is 90% automated, and the dual-entry method is employed for the remaining 10%.
+The upshot of this process is that the SWIID's harmonized estimates of income inequality are reliable, frequently updated, and employed around the world by international organizations, central banks, and other researchers in academia and beyond.
+
+
+# Wrangling Public Opinion Data for Harmonization
+
+Scholarship on comparative public opinion only rarely benefits from relevant items asked annually by the same survey in many countries [see, e.g., @Hagemann2017].
+To address the lack of cross-national and longitudinal data on many topics, a number of works have presented latent variable models that harmonize available but incomparable survey items [see @Caughey2019; @Claassen2019; @McGann2019; @Solt2020c; @Kolczynska2024].
+This approach has been used to generate cross-national time-series measures of public opinion on a range of topics, from economic, social, and immigration conservatism [@Caughey2019] to trust in government [@Kolczynska2024].
+The Dynamic Comparative Public Opinion (DCPO) model presented in @Solt2020c in particular has been employed to measure gender egalitarianism [@Woo2023], political interest [@Hu2024], and support for gay rights [@Woo2025], among other aspects of public opinion (see <https://dcpo.org/>).
+
+This sort of work is by nature extremely data intensive, drawing on information extracted from dozens if not hundreds of survey datasets.
+In DCPO projects, the collection of the source data proceeds in two steps: first, identifying the relevant survey items, and second, accumulating the survey responses.
+
+The first step, identifying the relevant survey items, involves finding surveys that contain questions on the topic of interest and then recording in a spreadsheet the survey, the variable representing the question of interest in the dataset, the question text, the response values ordered from least to most of the concept being investigated, and the original textual response categories.
+At present, this step is done entirely by hand.
+To minimize data-entry errors, the dual-entry method is used here too.
+Multiple collaborators go through the process separately, and the resulting spreadsheets are compared to catch the omnipresent data-entry errors.
+
+The second step, accumulating the survey responses, is fully automated through the use of the `DCPOtools` R package [@Solt2018].
+When passed the spreadsheet created in the first step, this package reads in each recorded survey dataset, extracts the variable of interest, reorders the response values for this variable from least to most of the concept investigated, applies survey weights, and then aggregates the weighted number of respondents in each of the reordered response categories in each country for each year in which the survey was fielded.
+`DCPOtools` also automatically ensures that country names are standardized using the excellent `countrycode` package for R [@Arel-Bundock2018] and that the years accurately reflect actual fieldwork dates using internal crosswalk tables.
+The aggregated number of respondents for each observed response-item-country-year then serve as the source data for the latent variable model.
+
 
 Another source of data-entry errors here involves survey weights.
 Weighting raw survey results to maximize the extent to which they are representative of the target population is important.
@@ -736,6 +769,12 @@ This was an issue for some `r {nrow(needed)/nrow(sd) * 100} %>% round()`% of the
 
 Any one of these mistakes should give pause to any researchers tempted to meet the challenge of 'janitor work' in harmonization research by hand entering the needed data.
 Correcting all of them is sufficient to undermine the results published in @Claassen2020b on the sources of democratic support (see online Appendix B).
+
+# Practical Suggestions of Data Wrangling
+
+- A diagram
+- Automation means more human factor involved
+- Potential of AI
 
 
 # Discussion
@@ -779,7 +818,7 @@ Nonetheless, with careful attention, not only can the threat of data-entry error
 \setcounter{table}{0}
 \renewcommand{\thetable}{A.\arabic{table}}
 
-# Details on Data-Entry Problems in the Democratic Support Source Data
+# Details on Data-Entry Problems in the Democratic Support Source Data {#sec-comparison}
 Comparing the original hand-entered dataset [@Claassen2020d] with data that were machine-collected using the `DCPOtools` package for R [@Solt2018] revealed three survey items for which the hand-entered data did not match the data's documented coding rules.
 These rules indicate that responses above the median value in the response scale are to be considered as supporting democracy, while those at the median value and below are not [see @Claassen2020b, Appendix 1.3].
 
@@ -798,7 +837,7 @@ And third, the Pew Global Attitudes surveys' four-point item asking about the im
 In this case, rather than including respondents who gave both responses above the median---"very important" and "somewhat important"---only those respondents who answered "very important" were entered as supporting democracy.
 This error caused the hand-entered percentages to be substantially lower in 91 country-years.
 
-# Consequences for Inference of Democratic Support Data-Entry Errors
+# Consequences for Inference of Democratic Support Data-Entry Errors {#sec-consequence}
 
 ```{r corrected_cm5}
 #| label: correctedCm5
