--- a/paper/main_wrangling.bib
+++ b/paper/main_wrangling.bib
@@ -280,6 +280,51 @@
   date-modified = {2023-10-31 10:50:59 -0500}
 }
 
+@article{Slomczynsi2025,
+  ids = {Slomczynsi2025},
+  title = {Navigating Complexities of Ex-Post Harmonization of Cross-national Survey Data: Insights from the Survey Data Recycling, SDR, Project },
+  author = {Slomczynsi,Kazmierz M. and Tomescu-Dubrow, Irina and Wysmulek, Ilona},
+  date = {2025},
+  journaltitle = {Working Paper},
+  date-added = {2025-04-23 13:00:04 -0500},
+  date-modified = {2025-04-23 13:00:27 -0500}
+}
+
+@article{Koc2025,
+  ids = {Koc2025},
+  title = {Modeling Trends in Public Opinion: An Overview of Approaches, Assumptions and Trade-offs },
+  author = {Koc,Piotr and Kołczyńska, Marta},
+  date = {2025},
+  journaltitle = {Working Paper},
+  date-added = {2025-04-24 13:00:04 -0500},
+  date-modified = {2025-04-24 13:00:27 -0500}
+}
+
+@article{Kritzinger2025,
+  ids = {Kritzinger2025},
+  title = {Visions for the future: Challenges and opportunities for creating
+sustainable scholarly infrastructures for data harmonization},
+  author = {Kritzinger, Sylvia and Lutz, Georg and Boomgaarden,Hajo},
+  date = {2025},
+  journaltitle = {Working Paper},
+  date-added = {2025-04-24 13:00:04 -0500},
+  date-modified = {2025-04-24 13:00:27 -0500}
+}
+
+
+
+@article{Liu2019,
+  title={Successes and struggles with computational reproducibility: lessons from the fragile families challenge},
+  author={Liu, David M and Salganik, Matthew J},
+  journal={Socius},
+  volume={5},
+  pages={2378023119849803},
+  year={2019},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+
+
 @article{GelmanLoken2014,
   ids = {GelmanLoken2014a},
   title = {The Statistical Crisis in Science},
@@ -881,6 +926,15 @@
   langid = {english},
   keywords = {dcpo,more data,pooled time series},
   file = {D:\zotero_system\storage\M8BVVDX6\ WooEtAl Public Support for Gay Rights Across Countries and Over Time.pdf}
+}
+
+@article{TaiSolt2025,
+  ids = {TaiSolt2025},
+  title = {Trust in Civil Servants: A Cross-National Dataset for Public Policy Research, 1986–2022},
+  author = {Tai, Yuehong Cassandra and Solt, Frederick},
+  date = {2025-03-20},
+  publisher={OSF}
+  
 }
 
 @article{Wuttke2019,
